# LogParser

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  main.cpp  main.cpp.txt
DearImGui/backends/: imgui_impl_glfw.cpp
src/: ImGuiSetup.cpp  MainUi.cpp  MainUi.h  main.cpp
